<resources>
    <string name="app_name">FoodDonorKE</string>
    <string name="org_name">Organization name</string>
    <string name="org_type">Organization type</string>
    <string name="location">Location</string>
    <string name="content_desc_location">Location icon</string>
    <string name="home">Home</string>
    <string name="two">2</string>
    <string name="bg_img_desc">Image View</string>
    <string name="login_welcome_text">Login</string>
    <string name="login_email">Email Address</string>
    <string name="login_email_dummy">Enter Your Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_ph">Enter Password</string>
    <string name="login_remember_text">Remember Me</string>
    <string name="login_btn_text">Log In</string>
    <string name="login_forgot_text">Forgot Password?</string>
    <string name="login_error_text">Incorrect Email or Password</string>
    <string name="login_signup_text">Don\'t have an account? Sign up here</string>
    <string name="signup_welcome_hello">Hello There!</string>
    <string name="signup_welcome_text">Sign Up</string>
    <string name="signup_name_hint">Name</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_conf_password_hint">Confirm password</string>
    <string name="signup_btn_text">Sign Up</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_login_text">Already have an account? Log In</string>
    <string name="search">Search</string>
    <string name="error">Error</string>
    <string name="content_desc_org_image">Organization image</string>
    <string name="content_desc_org_icon">Organization icon</string>
    <string name="content_desc_phone">Phone number</string>
    <string name="content_desc_twitter">Twitter account</string>
    <string name="content_desc_facebook">Facebook account</string>
    <string name="food_donation">Food donations</string>
    <string name="brief_desc">Brief description</string>
    <string name="donate_now">Donate now</string>
    <string name="organizations">Organizations</string>
    <string name="donations">Donations</string>
    <string name="ngo">NGOs</string>
    <string name="content_desc_instagram">Instagram account</string>
    <string name="content_desc_email">Email address</string>
    <string name="authenticating">Authenticating</string>
    <string name="welcome">Welcome %1$s,</string>
    <string name="welcome_subtitle">We rise by lifting others</string>
    <string name="view_profile">View your profile details</string>
    <string name="profile">Profile</string>
    <string name="donation_requests">Donation requests</string>
    <string name="content_profile_desc">Profile icon</string>
    <string name="signup_Phone_hint">Phone</string>
    <string name="signup_Location_hint">Location</string>
    <string name="signup_Description_hint">Description</string>
    <string name="update_profile">Update Profile</string>
    <string name="content_profile_img_desc">Profile image</string>
    <string name="content_desc_background">Splash screen background</string>
    <string name="content_desc_splash_button">Button to get started</string>
    <string name="splash_subtitle">Let’s be part of the movement in protecting the vulnerable from hunger</string>
    <string name="charity">Charity</string>
    <string name="skip">skip</string>
    <string name="get_started">Get Started</string>


    <!-- Strings for on Boarding Screen -->

    <!-- Titles -->

    <string name="first_slide_title">Hunger Striken</string>
    <string name="second_slide_title">Street Families</string>
    <string name="third_slide_title">The Orphans</string>
    <string name="fourth_slide_title">The Displaced</string>

    <!--Descriptions -->
    <string name="first_slide_desc">Extend a helping hand to the over 2 million hunger striken families in Kenya. Little is much if you share. </string>
    <string name="second_slide_desc">The over 250 thousand street families in Kenya needs your help. Extend a little kindness to the human family.</string>
    <string name="third_slide_desc">Put a smile on the face of one of the over 3.6 million orphans children  in Kenya. The smile will come around to you.</string>
    <string name="fourth_slide_desc">Help out the 380 thousand displace people in the Kenya, some food would help sustain them. </string>

    <!-- Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
  <string name="signing_up">Signing up …</string>
  <string name="loading">Loading …</string>
  <string name="failure_message">Something went wrong. Please check your Internet connection and try again later</string>
  <string name="unsuccessful_message">Something went wrong. Please try again later</string>
  <string name="charities">Charities</string>
  <string name="no_donations">No donations listed</string>
  <string name="camera">Camera</string>
  <string name="gallery">Gallery</string>
  <string name="paused">Upload paused</string>
  <string name="dialog_title">What would you like to donate?</string>
  <string name="enter_donation">Enter your donation</string>
  <string name="send_mail">Send Email</string>
  <string name="content_desc_user_account_icon">User account icon</string>
  <string name="content_desc_camera_icon">Camera icon to launch camera</string>
  <string name="content_desc_gallery_icon">Gallery icon to launch gallery</string>
  <string name="no_of_donations">0</string>
  <string name="content_desc_add_donation_item">Button to  add donation items</string>
  <string name="empty_input">Input required</string>
  <string name="successful_verification">Verification email sent</string>
  <string name="verification_prompt">Kindly verify your email before proceeding</string>
  <string name="log_out">Log out</string>
</resources>