<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OrganizationListFragment">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/triple_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:background="@color/food_donor_grey"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/triple_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:visibility="gone"
        tools:listitem="@layout/item_organization_list">

    </androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/larger_margin"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <TextView
        android:id="@+id/loading_text_view"
        style="@style/NormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_centerInParent="true"
        android:text="@string/loading"
        android:visibility="visible" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        tools:text="@string/error"
        android:visibility="gone" />

  </RelativeLayout>
</androidx.core.widget.NestedScrollView>