<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/donor"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            style="@style/OutlinedCardViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/food_donor_transparent_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_welcome_text_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_input_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/triple_margin"
                    android:layout_marginTop="@dimen/triple_margin"
                    android:layout_marginEnd="@dimen/triple_margin"
                    android:hint="@string/login_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordOutlinedTextField"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/triple_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/triple_margin"
                    android:hint="@string/login_password_hint"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/food_donor_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/login_signup_text_view"
                    style="@style/NormalTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/triple_margin"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginEnd="@dimen/triple_margin"
                    android:layout_marginBottom="@dimen/triple_margin"
                    android:text="@string/login_signup_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn" />

                <Button
                    android:id="@+id/login_btn"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/triple_margin"
                    android:layout_marginEnd="@dimen/triple_margin"
                    android:layout_marginTop="@dimen/triple_margin"
                    android:text="@string/login_btn_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordOutlinedTextField" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/login_welcome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/larger_margin"
            android:text="@string/login_welcome_text"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/firebaseProgressBar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/loadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/firebaseProgressBar"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>